# fpga-tools-qc

./: .gitignore  LICENSE.txt  Makefile  README.md  generic.mk  git.mk  opalkelly.mk  packages.mk  project_specific.mk  sim.mk  transcript  vitis.mk  vivado.mk  webtalk.jou  webtalk_15048.backup.jou  webtalk_18416.backup.jou
boards/: README.md  memristor.tcl  template.tcl  top.tcl
boards/memristor/: memristor.tcl
boards/modelock/: modelock.tcl
boards/modelock_2lasers/: modelock_2lasers.tcl  modelock_2lasers.xdc
boards/template/: template.tcl
boards/top/: top.bd  top.bxml
do/: README.md  compile_all.tcl  compile_lib_sim.tcl  compile_lib_src.tcl  compile_osvvm.tcl  compile_sim_tools.tcl  compile_unisim.tcl  compile_uvvm.tcl  default_wave.tcl  make_sim.tcl  modules.tcl  new_modelsim_proj.tcl  run_batch.tcl  run_gui.tcl
do/compile_uvvm_user_vips/: compile_all_user_vips.do  compile_src_user_vips.do
ip/9ccfe6b417583020/: 9ccfe6b417583020.xci  clk_wiz_0_sim_netlist.v  clk_wiz_0_sim_netlist.vhdl  clk_wiz_0_stub.v  clk_wiz_0_stub.vhdl
ip/de22ffec47276c46/: de22ffec47276c46.xci  fifo_generator_0_sim_netlist.v  fifo_generator_0_sim_netlist.vhdl  fifo_generator_0_stub.v  fifo_generator_0_stub.vhdl
ip/opal_kelly/: README.txt
lib_src/: _info  _lib.qdb  _lib1_0.qdb  _lib1_0.qtl
modelsim/: new.do  run.do
modules/alu_flowambiguity/: README.md  compile_order.tcl
modules/alu_gflow/: README.md  compile_order.tcl
modules/clock_synthesizer/: README.md  compile_order.tcl
modules/csv_readout/: compile_order.tcl
modules/delay_compensation/: compile_order.tcl
modules/fsm_feedforward/: README.md  compile_order.tcl
modules/fsm_flowambiguity/: compile_order.tcl
modules/fsm_gflow/: README.md  compile_order.tcl
modules/fsm_gflow_old/: compile_order.tcl
modules/johnson_cnt/: compile_order.tcl
modules/lfsr_bitgen/: README.md  compile_order.tcl
modules/lfsr_inemul/: README.md  README.txt  compile_order.tcl
modules/memristor_ctrl/: compile_order.tcl
modules/nff_cdcc/: README.md  compile_order.tcl
modules/nff_cdcc_cntr/: README.md  compile_order.tcl
modules/nff_cdcc_fedge/: README.txt  compile_order.tcl
modules/nff_cdcc_flag/: README.md  compile_order.tcl
modules/ok_usb_32b_fifo_ctrl/: compile_order.tcl
modules/pulse_gen/: README.md  compile_order.tcl
modules/qubit_deskew/: README.md  compile_order.tcl
modules/reg_delay/: README.md  compile_order.tcl
modules/reset/: compile_order.tcl
modules/shiftreg_delay/: compile_order.tcl
modules/shiftreg_queue_buffer/: compile_order.tcl
modules/shiftreg_queue_shifter/: compile_order.tcl
modules/shiftreg_redgedetect/: compile_order.tcl
modules/top_feedforward/: README.md  compile_order.tcl  xem7350_feedforward.xdc
modules/top_feedforward_40khz/: compile_order.tcl  xem7350_feedforward.xdc
modules/top_flowambiguity/: README.md  compile_order.tcl  xem7350_feedforward.xdc
modules/top_gflow/: README.md  compile_order.tcl  xem7350_feedforward.xdc  (+1 more)
scripts/gui/csv_readout/: CMakeLists.txt  CMakeLists_redis.txt  Makefile  README.txt  main.cpp  main_redis.cpp  run.bat
scripts/gui/csv_readout/lib/: guiBackendObj.h  okFrontPanel.h
scripts/gui/redis/: CMakeCache.txt  CMakeLists.txt  Makefile  main.cpp  run.bat
scripts/gui/redis/lib/: guiBackendObj.h
simulator/: modules.tcl  new.do  run.do  xil_iplib_verilog.tcl
tcl/: README.md
(+734 files in other folders)
